# ChangeLog for media-gfx/graphviz
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.134 2008/01/03 11:31:45 maekke Exp $

  03 Jan 2008; Markus Meier <maekke@gentoo.org> graphviz-2.16.1-r2.ebuild:
  sanitize built_with_use checks for media-libs/gd, thanks jakub in bug #204153

  29 Dec 2007; Markus Meier <maekke@gentoo.org>
  +files/graphviz-2.16.1-tcltk.patch, graphviz-2.16.1-r2.ebuild:
  fix building with tcl/tk-8.5, bug #181526

*graphviz-2.16.1-r2 (21 Dec 2007)

  21 Dec 2007; Robin H. Johnson <robbat2@gentoo.org>
  +files/graphviz-2.16.1-pango-optional.patch, +graphviz-2.16.1-r2.ebuild:
  Make pango+cairo optional again with a patch. Need to send to upstream still.

  20 Dec 2007; Markus Meier <maekke@gentoo.org> graphviz-2.16.1.ebuild,
  graphviz-2.16.1-r1.ebuild:
  check that cairo is built with USE=svg, bug #202781

*graphviz-2.16.1-r1 (19 Dec 2007)

  19 Dec 2007; Robin H. Johnson <robbat2@gentoo.org>
  +files/graphviz-2.16.1-python-buildfix.patch, +graphviz-2.16.1-r1.ebuild:
  Fixes: Bug #202536 - pango is needed to build the dot tool now, to large
  alteration of RDEPEND. Bug #202618 - parallel compile fix for TCL bindings.
  s390 dropped due to missing dependancies.

  17 Dec 2007; Fabian Groffen <grobian@gentoo.org> graphviz-2.12.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  16 Dec 2007; Ryan Hill <dirtyepic@gentoo.org> Manifest:
  Fix Manifest.

*graphviz-2.16.1 (16 Dec 2007)

  16 Dec 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/graphviz-2.16.1-bindings.patch,
  +files/graphviz-2.16.1-gcc43-missing-includes.patch,
  +graphviz-2.16.1.ebuild:
  Version bump. Fixes:

    167896 - media-gfx/graphviz-2.12 error -- fontconfig: Didn't find expected
             font family
    181147 - media-gfx/graphviz missing PNG/JPEG support unless media-libs/gd
             was built w/ USE="png jpeg"
    189597 - media-gfx/graphviz rename USE-flag pango to cairo